Some minor fixes.

--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -7,7 +7,7 @@
 \usepackage{lipsum}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
-\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow, float}
+\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow, float, tikz-uml}
 \usetikzlibrary{arrows, positioning}
 
 \usepackage{listings}
