--- a/02gy_cpp/02gy_cpp.tex
+++ b/02gy_cpp/02gy_cpp.tex
@@ -156,8 +156,286 @@ int main()
 	\smallskip
 	
 	A stack egy FILO (\textit{first in last out}) adatszerkezet -- azaz azt az elemet ,,dobja'' ki a vezérlés a stack-ből, melyet utoljára rakott be.
+	\section{Mutatók és referenciák}
+	A mutatók olyan nyelvi elemek, melyek egy adott típusú memóriaterületre mutatnak. Segítségükkel anélkül is tudunk hivatkozni egy adott objektumra (és nem csak a másolatára), hogy közvetlenül az objektummal dolgoznánk.
+	\begin{lstlisting}
+int main()
+{
+	int c = 5, d = 8;
+	int *p = &c;
+}
+	\end{lstlisting}
+	A fenti példában \texttt{p} egy mutató (\textit{pointer}), mely egy \texttt{int} típusra mutat. Ahhoz, hogy értéket tudjunk adni egy mutatónak, egy memóriacímet kell neki értékül adni, erre való a \textbf{címképző operátor} (\&). Ha a mutató által \textit{mutatott értéket} szeretnénk módosítani, akkor dereferálnunk kell a \textbf{dereferáló operátor}ral (*).
 	
-	\section{Paraméter átvétel}
+	A mutatók működését az alábbi példa demonstrálja:
+	\begin{lstlisting}
+int c = 5, d = 8;
+int *p = &c; //referáljuk c-t
+*p = 4; //dereferáljuk p-t
+p = &d;
+*p = 7;
+	\end{lstlisting}
+	\begin{figure}[!h]
+		\centering
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\draw [thick, black] (0, 0) -- (2, 0);
+		\draw [thick, black] (0, 0) -- (0, 3);
+		\draw [thick, black] (2, 0) -- (2, 3);
+		\node (c) [Node] at (1,0.25) {\texttt{c} (5)};
+		\node (d) [Node] at (1,0.75) {\texttt{d} (8)};
+		\node (p) [Node] at (1,1.25) {\texttt{p}};
+		
+		\path[every node/.style={font=\sffamily\small}]
+		(p) edge[bend left = 90, thick, ->] node [right] {} (c);
+		\end{tikzpicture}\quad 
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\draw [thick, black] (0, 0) -- (2, 0);
+		\draw [thick, black] (0, 0) -- (0, 3);
+		\draw [thick, black] (2, 0) -- (2, 3);
+		\node (c) [Node] at (1,0.25) {\texttt{c} (4)};
+		\node (d) [Node] at (1,0.75) {\texttt{d} (8)};
+		\node (p) [Node] at (1,1.25) {\texttt{p}};
+		
+		\path[every node/.style={font=\sffamily\small}]
+		(p) edge[bend left = 90, thick, ->] node [right] {} (c);
+		\end{tikzpicture}\quad 
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\draw [thick, black] (0, 0) -- (2, 0);
+		\draw [thick, black] (0, 0) -- (0, 3);
+		\draw [thick, black] (2, 0) -- (2, 3);
+		\node (c) [Node] at (1,0.25) {\texttt{c} (4)};
+		\node (d) [Node] at (1,0.75) {\texttt{d} (7)};
+		\node (p) [Node] at (1,1.25) {\texttt{p}};
+		
+		\path[every node/.style={font=\sffamily\small}]
+		(p) edge[bend left = 90, thick, ->] node [right] {} (d);
+		\end{tikzpicture}\quad 
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\draw [thick, black] (0, 0) -- (2, 0);
+		\draw [thick, black] (0, 0) -- (0, 3);
+		\draw [thick, black] (2, 0) -- (2, 3);
+		\node (c) [Node] at (1,0.25) {\texttt{c} (4)};
+		\node (d) [Node] at (1,0.75) {\texttt{d} (8)};
+		\node (p) [Node] at (1,1.25) {\texttt{p}};
+		
+		\path[every node/.style={font=\sffamily\small}]
+		(p) edge[bend left = 90, thick, ->] node [right] {} (d);
+		\end{tikzpicture}
+		
+		\smallskip
+		Az objektum neve mellett zárójelben található az értéke.
+	\end{figure}
+	Rendre: pointer inicializálása, pointer által mutatott érték módosítása, pointer átállítása másik memóriacímre, és a mutatott érték módosítása.
+	
+	Egy mutató mutathat változóra, másik mutatóra vagy sehova. Azokat a mutatókat, melyek sehová sem mutatnak, null pointernek nevezzük, és így hozhatjuk létre őket:
+	
+	{\centering \texttt{p = 0;\quad \quad p = NULL;\quad \quad p = nullptr;} \par}
+	\begin{note}
+		Ez a három értékadás (közel) ekvivalens, azonban a \texttt{nullptr} kulcsszó csak C++11ben és azutáni szabványokban érhető el.
+	\end{note}
+	\subsection{Konstans korrektség}
+	A konstans korrektség egy szabály a C++ nyelvben: ha egy értéket konstansnak jelölünk, azt nem módosíthatjuk a program futása során.
+	\begin{lstlisting}
+const int ci = 6;
+int *p = &ci;
+	\end{lstlisting}
+	A fenti kód nem fordul le, mert \texttt{ci} konstans, de \texttt{p} nem egy nem konstans\textbf{ra} mutató mutató, ugyanis ez sérteni a konstans korrektséget. A probléma forrása az, ha fenti értékadás lefordulna, akkor \texttt{ci} értékét tudnánk módosítani \texttt{p}-n keresztül.
+	\begin{lstlisting}
+const int ci = 6;
+const int *p = &ci;
+	\end{lstlisting}
+	A fenti módosítással a kód már lefordul, hiszen a \texttt{p} itt már egy konstansra mutató mutató, azaz mutathat konstans változókra. Egy konstansra mutató mutató \textbf{nem tudja megváltoztatni} a mutatott értéket, viszont át lehet állítani egy másik memóriacímre.
+	\begin{lstlisting}
+const int ci = 6;
+const int *p = &ci;
+
+int c = 5;
+p = &c;
+	\end{lstlisting}
+	A fenti kód is szabályos, konstansra mutató mutatóval nem konstans is értékre mutathatunk. Érdemes átgondolni ennek a következményeit, hisz \texttt{c} nem konstans, ezért az értékét továbbra is módosíthatjuk (csak nem \texttt{p}-n keresztül)! Egy konstansra mutató mutató nem azt jelenti, hogy a mutatott érték sosem változhat meg. Csupán annyit jelent, hogy a mutatott értéket ezen a mutatón keresztül nem lehet megváltoztatni.
+	\begin{lstlisting}
+const int *p = &ci;
+int c = 5;
+p = &c;
+c = 5;
+	\end{lstlisting}
+	A \texttt{const} kulcsszó több helyre is kerülhet.
+	\begin{lstlisting}
+const int *p;
+int const *p;
+	\end{lstlisting}
+	A fenti két sor ugyanazt jelenti, a mutatott értéket nem lehet megváltoztatni a mutatón keresztül.
+	\begin{lstlisting}
+int * const p;
+	\end{lstlisting} 
+	Amennyiben a * után van a \texttt{const}, akkor egy \textbf{konstans mutatót kapunk}, mely megváltoztathatja a mutatott értéket, de nem mutathat másra (konstans mutató\quad$\not=$\quad konstanra mutató mutató). Nyilván, egy pointer lehet egy konstansra mutató konstans mutató is, amin keresztül nem lehet megváltoztatni a mutatott értéket és a mutatót sem lehet máshova átállítani.
+	\begin{lstlisting}
+const int * const p;
+	\end{lstlisting}
+	\subsection{Mutatóra mutató mutatók} 
+	Mutatóra mutató mutatók is léteznek. Néhány példa:
+	\begin{lstlisting}
+int *p;
+int **q = &p;
+int ***r = &q;
+	\end{lstlisting}
+	Példaképp \texttt{q}-n keresztül meg tudjuk változni, \texttt{p} hova mutasson.
+	\begin{lstlisting}
+int c, d;
+int *p = &c;
+int **q = &p;
+*q = &d;
+	\end{lstlisting}
+	A megfelelő szinten a mutatók konstansá tételével még bonyolultabb példákat kaphatunk:
+	\begin{lstlisting}
+int c, d;
+int *p = &c;
+int * const *q = &p;
+*q = &d; // forditasi hiba
+	\end{lstlisting}
+	Mivel \texttt{q} egy \texttt{int}-re mutató konstans mutatóra mutató mutató, így csak egy olyan mutatóval tudunk rámutatni, ami egy \texttt{int}-re mutató konstans mutatóra mutató mutatóra mutató mutató.
+	\begin{lstlisting}
+int c, d;
+int *p = &c;
+int * const *q = &p;
+int *const ** const r = &q;
+	\end{lstlisting}
+	\begin{note}
+		Megnyugtatás végett, ritkán van szükség mutatóra mutató mutatónál bonyolultabb szerkezetre.
+	\end{note}\section{Tömbök}
+	A tömb a C++ egy beépített adatszerkezete, mellyel tömb azonos típusú elemet tárolhatunk és kezelhetünk egységesen. Előzménytárgyakból már megismertük valamennyi funkcionalitását, ám számos veszélyét még nem.
+	\begin{lstlisting}
+int main()
+{
+	int i = 5;
+	int t[] = {5,4,3,2,1};
+}
+	\end{lstlisting}
+	\texttt{t} egy 5 elemű \textbf{tömb}. Nézzük meg, mekkora a mérete (figyelem, ez \textbf{implementációfüggő!})!
+	\begin{lstlisting}
+std::cout << sizeof(i) << std::endl;
+std::cout << sizeof(t) << std::endl;
+	\end{lstlisting}
+	A \texttt{sizeof} operátor megadja a paraméterként megadott típus, vagy objektum esetében annak típusának méretét (bővebben később). Ez minden implementációra specifikus. Azt látjuk, hogy mindig ötszöröse lesz a \texttt{t} az \texttt{i}-nek. Azaz a tömbök tiszta adatok.  Stacken ábrázolva így képzeljük el:
+	
+	\begin{figure}[!h]
+		\centering
+		\begin{tikzpicture}
+			\tikzstyle{Node} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+			\tikzstyle{arrow} = [thick,->,>=stealth]
+			
+			\draw [thick, black] (0, 0) -- (2, 0);
+			\draw [thick, black] (0, 0) -- (0, 3.5);
+			\draw [thick, black] (2, 0) -- (2, 3.5);
+			\node (c2) [Node] at (1,0.25) {\texttt{i} (5)};
+			\node (d2) [Node] at (1,0.75) {\texttt{t[0]} (5)};
+			\node (d2) [Node] at (1,1.25) {\texttt{t[1]} (4)};
+			\node (d2) [Node] at (1,1.75) {\texttt{t[2]} (3)};
+			\node (d2) [Node] at (1,2.25) {\texttt{t[3]} (2)};
+			\node (d2) [Node] at (1,2.75) {\texttt{t[4]} (1)};
+		\end{tikzpicture}
+		\smallskip
+		
+		A \texttt{main} függvény változói.
+	\end{figure}
+	\subsection{Biztonsági rések nem definiált viselkedés kihasználásával}
+	Irassuk ki a a tömb elemeit! A példa kedvéért rontsuk el a kódot.
+		\begin{lstlisting}
+for (int i = 0; i < 6; i++) // Hupsz. A csak 5 elem van.
+{
+	std::cout << t[i] << std::endl;
+}
+	\end{lstlisting} 
+	Itt látható, hogy túl fogunk indexelni. Ez {nem definiált viselkedés}hez vezet. Várhatóan memóriaszemetet fog kiolvasni az utolsó elem helyett, de sose tudhatjuk pontosan mi fog történni. Fordítási időben ezt a hibát a fordító nem veszi észre. A gyakorlaton a programot futtatva nem következett be futási idejű hiba.
+	
+	Most növeljük meg az elemeket, és indexeljünk túl egészen 100ig!
+	\begin{lstlisting}
+for (int i = 0; i < 100; i++)
+{
+	++t[i];
+}
+std::cout << "sajt" << std::endl;
+	\end{lstlisting} 
+	Ez a program továbbra is nem definiált viselkedést tartalmaz. Mivel több memóriához nyúlunk hozzá indokolatlanul, ezért nagyobb rá az esély, hogy futási idejű hibába ütközzünk. Az órán a {sajt} szöveg ki lett írva, mégis kaptunk egy szegmentálási hibát (\textit{segmentation fault}).
+	
+	\begin{lstlisting}
+for (int i = 0; i < 100000; i++)
+{
+	++t[i];
+}
+std::cout << "sajt" << std::endl;
+	\end{lstlisting} 
+	A túlindexelést tovább fokozva a program még mielőtt sajt-ot ki tudta volna írni, szegmentálási hibával leállt. Ez jól demonstrálja, hogy ugyanolyan jellegű  a hibát követtük el, de mégis más volt a végeredmény. Ez az egyik ok, amiért veszélyesek a nem definiált viselkedések. Mivel számos különböző hibát okozhatnak, ezért a diagnosztizálásuk sem mindig egyszerű. Az alábbi kód szemléltet egy példát, hogyan lehet biztonsági rés a nem definiált viselkedésből.
+	\begin{lstlisting}
+#include <iostream>
+#include <string>
+
+int main()
+{
+	int t[] = {5,4,3,2,1};
+	int isAdmin = 0;
+	std:string name;
+	std::cin >> name;
+	for (int i = 0; i < name.size(); ++i)
+	{
+		t[i] = 1;
+	}
+	if (name == "pityu")
+		isAdmin = 1;
+	std::cout << "Admin?: " << (isAdmin != 0 ) << std::endl;
+}
+	\end{lstlisting}
+	Ha a programnak \texttt{pityu}-t adunk meg amikor be akarja olvasni \texttt{name}-et, akkor minden rendben. De mivel a forráskódot ismerjük, azért ha hosszú nevet adnánk (nagyobb mint 5), akkor a túlindexelés miatt ki tudjuk használni a nem definiált viselkedéseket. Az is előfordulhat, hogy az \texttt{isAdmin} memóriacímére írunk, és elérjük, hogy a szoftver adminként authentikáljon valakit, aki nem az.
+	\medskip
+	
+	Hogyan lehet ezeket a hibákat elkerülni? Túl azon, hogy figyelni kell, vannak programok amik segítenek. Ehhez használhatunk \texttt{sanitizer}-eket. Ezek módosítanak a fordító által generált kódon. Létrehoz ellenőrzéseket, amik azelőtt észrevesznek bizonyos nem definiált viselkedéseket, mielőtt azok megtörténnének. Pl. itt a túlindexelés, egy futási idejű hibához és egy jól olvasható hibaüzenethez vezetne. Használatukhoz elég egy extra paranccsal fordítanunk:
+	
+	{\centering\texttt{g++ main.cpp -fsanitize=address}\par }
+	
+	A sanitizerek csa abban az esetben találnak meg egy hibát, ha a probléma előfordul (azaz futási időben, nem fordítási időben ellenőriz). Amennyiben előfordul, akkor elég pontos leírást tudunk kapni arról, hogy merre van a probléma. Fordítási időben a figyelmeztetések használata segíthet bizonyos hibák elkerülésében.
+	
+	{\centering \texttt{g++ main.cpp -Wall -Wextra} \par}
+	
+	A fenti két kapcsoló szintén extra ellenőrzéseket vezet be, de nem változtatják meg a generált kódot.
+	\subsection{Hivatkozás tömb elemeire}
+	Egy tömb adott elemére több módon is hivatkozhatunk:
+	
+	{\centering \texttt{*(p + 3) == *(3 + p) == p[3] == 3[p]} \par}
+	\
+	\begin{lstlisting}
+#include <iostream>
+
+int main()
+{
+	int t[][3] = {{1,2,3},{4,5,6}};
+	return 0;
+}
+	\end{lstlisting}
+	Tekintsük a fenti két dimenziós tömböt. Az első \texttt{[]} jelek közt nincs méret, mert a fordító az inicializáció alapján meg tudja állapítani. A második dimenzió méretének megadása viszont kötelező.
+	
+	\medskip
+	Fentebb a tömböknél megadott ekvivalenciát a mátrixra alkalmazva számos indexelési módot le tudunk vezetni:
+	\medskip
+	
+	\begin{center}
+		\texttt{t[1][] == *(*(t+1)+0) == *(1[t]+0) == 0[1[t]] == 0[*(t+1)] == *(t+1)[0] == 1[t][0] } 
+		\end{center}
+	\begin{note}
+		Előzmény tárgyakból elképzelhető, hogy azt tanultuk, hogy egy tömb méretének egy változót is megadhatunk. Ezt a \texttt{gcc} fordító elfogadja és jó kódot is generál belőle. De ez egy nem szabványos kiterjesztés, ezért nem garantált, hogy ezt minden fordító megteszi. Ez jól demonstrálja, hogy a fordítók nem mindenben követik szorosan a szabványt.
+	\end{note}
+	\section{Paraméter átvétel, visszatérési érték}
 	\subsection{Érték szerinti paraméter átvétel}
 	Próbáljuk megvalósítani a swap függvényt!
 	%http://tex.stackexchange.com/questions/228724/how-do-i-make-tikz-make-a-curved-arrow-from-one-node-to-another-when-my-nodes-ar
@@ -218,32 +496,7 @@ int main()
 	\end{figure}
 	C++ban alapértelmezett módon a paraméterátadás érték szerint történik.
 	\subsection{Mutatók érték szerinti átadása}
-	A mutatók olyan nyelvi elemek, melyek egy adott típusú memóriaterületre mutatnak. Segítségükkel anélkül is tudunk hivatkozni egy adott objektumra (és nem csak a másolatára), hogy közvetlenül az objektummal dolgoznánk. Most röviden megismerkedünk velük, de később részletesebben visszatérünk rájuk.
-	\begin{lstlisting}
-int main()
-{
-	int c = 5, d = 8;
-	int *p = &c;
-}
-	\end{lstlisting}
-	A fenti példában \texttt{p} egy mutató (\textit{pointer}), mely egy \texttt{int} típusra mutat. Ahhoz, hogy értéket tudjunk adni egy mutatónak, egy memóriacímet kell neki értékül adni, erre való a \textbf{címképző operátor} (\&). Ha a mutató által \textit{mutatott értéket} szeretnénk módosítani, akkor dereferálnunk kell a \textbf{dereferáló operátor}ral (*).
-	\begin{lstlisting}
-int *p = &c; //referáljuk c-t
-*p = 4; //dereferáljuk p-t
-p = &d;
-*p = 7;
-	\end{lstlisting}
-	Rendre: pointer inicializálása, pointer által mutatott érték módosítása, pointer átállítása másik memóriacímre, és a mutatott érték módosítása.
-	
-	Egy mutató mutathat változóra, másik mutatóra vagy sehova. Azokat a mutatókat, melyek sehová sem mutatnak, null pointernek nevezzük, és így hozhatjuk létre őket:
-	
-	{\centering \texttt{p = 0;\quad \quad p = NULL;\quad \quad p = nullptr;} \par}
-	
-	\begin{note}
-		Ez a három értékadás (közel) ekvivalens, azonban a \texttt{nullptr} kulcsszó csak C++11ben és azutáni szabványokban érhető el.
-	\end{note}
-
-  Nézzük meg, hogy hogyan tudunk megcserélni két értéket ezúttal helyesen, mutatók segítségével.
+  	Nézzük meg, hogy hogyan tudunk megcserélni két értéket ezúttal helyesen, mutatók segítségével.
 	
 	\begin{lstlisting}
 void swapP(int *a, int *b)
@@ -254,7 +507,16 @@ void swapP(int *a, int *b)
 }
 	\end{lstlisting}
 	
-	Amennyiben ezt a függvényt hívjuk meg, valóban megcserélődik a két változó értéke. De ehhez fontos, hogy ne \texttt{swapP(c, d)}-t írjunk, az ugyanis az fordítási hibához vezetne, hiszen a \texttt{c} és \texttt{d} típusa \texttt{int}, és nem \texttt{int*}. Ahhoz, hogy értéket adjunk egy pointernek, a \texttt{c}-hez és \texttt{d}-hez tartozó memóriacímeket kell átadni, így a \texttt{swapP(\&c, \&d)} hívás lesz megfelelő.
+	Amennyiben ezt a függvényt hívjuk meg, valóban megcserélődik a két változó értéke. De ehhez fontos, hogy ne \texttt{swapP(c, d)}-t írjunk, az ugyanis az fordítási hibához vezetne, hiszen a \texttt{c} és \texttt{d} típusa \texttt{int}, és nem \texttt{int*}. Ahhoz, hogy értéket adjunk egy pointernek, a \texttt{c}-hez és \texttt{d}-hez tartozó memóriacímeket kell átadni!
+	\begin{lstlisting}
+//...
+int main()
+{
+	int c = 5, d = 8;
+	swapP(&c, &d);
+	std::cout << c << ' ' << d << std::endl; // 5 8
+}
+	\end{lstlisting}
 	\begin{note}
     A mutatókat továbbra is érték szerint adjuk át. Az \texttt{a} és \texttt{b} paraméterekben lévő memóriacím tehát a másolata annak, amit a hívás helyén megadtunk.
 	\end{note}
@@ -425,164 +687,161 @@ int& addOne(int &i)
 	\begin{note}
 		Értelemszerűen pointerekkel ez ugyanúgy probléma.
 	\end{note}
-	\section{Statikus változók/függvények}
-	A \texttt{static} kulcsszónak számos jelentése van, annak függvényében, hogy milyen kontextusban írjuk egy változó vagy függvény elé. 
-	\subsection{Fordítási egységre lokális változók}
-	A függvényeken és osztályokon kívül deklarált statikus változók az adott fordítási egységre lokálisak -- élettartamuk a futás elejétől végigtartamig tart, és kizárólagosan az adott fordítási egységben láthatóak.
-	\medskip
-	
-	\fbox{\textbf{main.cpp}}
+	\subsection{Függvény pointerek}
+	C++ban lehetőségünk van arra is, hogy függvényeket adjunk át paraméterként.
 	\begin{lstlisting}
-#include <iostream>
-
-static int x;
-
-int main()
+int add(int a, int b)
 {
-	x = 2;
-}
-	\end{lstlisting}
-	\medskip
-	
-	\fbox{\textbf{other.cpp}}
-	\begin{lstlisting}
-#include <iostream>
-
-static int x;
-
-void f()
-{
-	x = 0;
-}
-	\end{lstlisting}
-	Ha ezt a két fájlt együtt fordítjuk, nem kapunk linkelési hibát, ugyanis a \texttt{main.cpp}-ben lévő \texttt{x} egy teljesen más változó, mint ami az \texttt{other.cpp}-ben van.
-	
-	\smallskip
-	Csak úgy mint a globális változókra, fordítási egységen belül bármikor hivatkozhatunk egy statikusra, és hasonló módon inicializálódnak.
-	\begin{lstlisting}
-static int x;
-
-int main()
-{
-	int x = 4;
-	std::cout << ::x << std::endl; // 0
-}
-	\end{lstlisting}
-	\subsection{Függvényen belüli statikus változók}
-	Azokat a változókat, melyek függvényen belül vannak a \texttt{static} kulcsszóval definiálva, függvényszintű változónak is szokás hívni. Élettartamuk a függvény első hívásától a program futásának végéig tart, míg láthatóságuk csak az adott függvényen belül van. A hagyományos lokális változókkal ellenben tehát nem semmisülnek meg, amikor az adott függvény futása befejeződik. A következő kódrészlet szemlélteti ezt a viselkedést.
-	
-	\begin{lstlisting}
-int f()
-{
-	static int x = 0;
-	++x;
-	return x;
+	return a + b;
 }
 
-int main() 
+int mul(int a, int b)
 {
-	for(int i = 0; i<5; i++)
-		std::cout << f() << ' '; // 1 2 3 4 5
-}
-	\end{lstlisting}
-	Ahogy az megfigyelhető fent, \texttt{x} csak egyszer inicializálódik, majd a későbbi függvényhívások után egyre növekszik az értéke.
-	\subsection{Fordítási egységre lokális függvények}
-  Nem csak változókat, függvényeket is deklarálhatunk statikusnak, melyek a fordítási egységre lokálisak. 
-	\begin{lstlisting}
-static int f()
-{
-	return 0;
+	return a * b;
 }
 
-int main() {std::cout << f();} // 0
-	\end{lstlisting}
-	Ezek a függvények csak az adott fordítási egységen belül érhetőek el.
-	\begin{note}
-		Figyelem! A később szóba kerülő metódusok esetében mást jelent a \texttt{static} kulcsszó, mint amit itt leírtunk.
-	\end{note}
-	\subsection{Névtelen/anonim névterek}
-	Fordítási egységre lokális változókat és függvényeket tudunk deklarálni névtelen névterek (\textit{unnamed namespaces}, vagy \textit{anonymous namespaces}) segítségével. Egy név nélküli névteren belül deklarált változók és függvények hasonlóan viselkednek, mintha eléjük lenne írva a \texttt{static} kulcsszó.
-	\begin{lstlisting}
-namespace
+int reduce(int *start, int size, int initial, int (*op)(int, int))
 {
-	int x;
-	std::string y;
-	void f() {}
-}
-	\end{lstlisting}
-	\begin{note}
-    A \texttt{static} osztályon belüli jelentéséről később lesz szó.
-	\end{note}
-	\section{Függvény túlterhelés}
-	Térjünk vissza a korábban megírt swap függvényünkhöz.
-	\begin{lstlisting}
-void swap(int &a, int &b)
-{
-	int tmp = a;
-	a = b;
-	b = tmp;
-}
-	\end{lstlisting}
-	Ez a függvény addig jó, amíg csak \texttt{int}-eket szeretnénk megcserélni. Mi van, ha \texttt{std::string}-eket kéne? A megoldás egyszerű, \textbf{túlterheljük} (\textit{overload}) a \texttt{swap} függvényt.
-	\begin{lstlisting}
-void swap(std::string &a, std::string &b)
-{
-	std::string tmp = a;
-	a = b;
-	b = tmp;
-}
-	\end{lstlisting}
-	Túlterhelésnek azt nevezzük, amikor két vagy több függvénynek a neve azonos, de a paramétereik különböznek. Tagfüggvényeket konstansság alapján is túl lehet terhelni.
-	\begin{note}
-		A később elhangzó osztályok tagfüggvényeinél a függvény konstanssága is számít (azonos nevű és paraméter listájú függvény különöző konstanssággal ugyanúgy túlterhelésnek számít).
-	\end{note}
-	\subsection{Operátor túlterhelés}
-	Ahogy láttuk a 2. gyakorlat elején, lehetőségünk van függvényeket túlterhelni. Ez operátorokra is igaz. Ha példaként vesszük a lineáris algebrából tanult rendezett valós számhármasokat ($\mathbb{R}^3$), lehetőségünk van arra, hogy a tanultak alapján definiáljuk a köztük értelmezett összeadást.
-	%TODO temporális változók
-	\begin{lstlisting}
-struct LinAlgVector
-{
-	double x1, x2, x3;
-};
-
-LinAlgVector operator+(const LinAlgVector &lhs, const LinAlgVector &rhs)
-{
-	LinAlgVector ret;
-	ret.x1 = lhs.x1 + rhs.x1;
-	ret.x2 = lhs.x2 + rhs.x2; 
-	ret.x3 = lhs.x3 + rhs.x3;
+	int ret = initial;
+	for (int i = 0; i < size; i++)
+	{
+		ret = (*op)(ret, start[i]);
+	}
 	return ret;
 }
 
 int main()
 {
-	LinAlgVector a, b;
-	a.x1 = 1; a.x2 = 2; a.x3 = 3;
-	b.x1 = 1; b.x2 = 1; b.x3 = 1;
-	
-	LinAlgVector c = a + b; 
+	int t[] = {1,2,3,4,5};
+	std::cout << reduce(t,5,0,&add) << std::endl;
+	std::cout << reduce(t,5,0,&mul) << std::endl;
 }
 	\end{lstlisting}
-	A \texttt{main} függvényben lévő értékadás ezzel ekvivalens: \texttt{c = operator+(a, b)}, így láthatjuk, hogy az operátorok túlterhelése gyakorlatilag a függvénytúlterhelés speciális esete. 
-	\smallskip 
 	
-	Írjuk meg a \texttt{print} függvényt 3D vektorokra! A gyakran kiíratáshoz használt jobb shift operátor (\textit{right shift operator}), a \texttt{\<} is túlterhelhető. Mivel mi az \texttt{std::cout} változóval szeretnénk majd kiíratni, melynek típusa \texttt{std::ostream}, így a függvényünk első paramétere egy ilyen típus lesz, a második meg egy \texttt{LinAlgVector} típus.
+	Itt \texttt{reduce} egy olyan paramétert is vár, mely igazából egy függvény, amely \texttt{int}-et ad vissza, és két \texttt{int}-et vár paraméterül.
+	\begin{note}
+		A szavakba öntés segíthet a megértésben: \texttt{op} egy olyan függvényre mutató mutató, melynek két \texttt{int} paramétere van, és \texttt{int} a visszatérési értéke.
+	\end{note}
 	
+	A kódban feltűnhet, hogy a tömb mellé paraméterben elkértük annak méretét is. Ennek az az oka, hogy a \texttt{t} tömb egy \texttt{int}-re mutató mutatóvá fog konvertálódni a paraméter átadás során, ami a tömb első elemére mutat. Ennek hatására elvesztjük azt az információt, hogy mekkora volt a tömb (a tömbök és paraméterátadás kapcsolátról később bévebben lesz szó). Így át kell adni ezt az információt is. 
+	
+	Mellékesen, egy függvény átadásakor csak függvénypointert tudunk átadni. Egy függvénypointeren a függvény meghívása az egyetlen értelmes művelet. Így a \texttt{\&} jel elhagyható függvényhíváskor és az \texttt{op} elől is elhagyható a * a paramétereknél.
 	\begin{lstlisting}
-/* ... */
-
-std::ostream& operator<<(std::ostream& os, const LinAlgVector &l)
+int reduce(int *start, int size, int initial, int op(int, int)))
 {
-	os << l.x1 << ' ' << l.x2 << ' ' << l.x3;
-	return os;
+	//...
 }
 
 int main()
 {
-	/* ... */
-	std::cout << c << std::endl; // 2 3 4
+	int t[] = {1,2,3,4,5};
+	std::cout << reduce(t,5,0,add) << std::endl;
+	std::cout << reduce(t,5,0,mul) << std::endl;
 }
 	\end{lstlisting}
+	\subsection{Tömbök átadása függvényparaméterként}
+	Próbáljunk meg egy tömböt érték szerint átadni egy függvénynek!
+	\begin{lstlisting}
+#include <iostream>
+
+void f(int t[])
+{
+	std::cout << sizeof(t) << std::endl;
+}
+
+int main()
+{
+	int t[] = {1,2,3,4,5};
+	std::cout << sizeof(t) << std::endl;
+	f(t);
+}
+	\end{lstlisting}
+	Kimenet: \texttt{20 8} (implementáció függő)
 	
-	Feltűnhet, hogy a stream objektumra mutató referenciát a függvény végén vissza is adjuk, hogy tudjuk a kiíratást láncolni.
+	Bár azt hihettük, hogy \texttt{t} tömb méretét írattuk ki ket alkalommal, valójában amikor azt érték szerint próbálunk meg átadni egy tömböt, az átkonvertálódik a tömb elejére mutató pointerré.
+	\begin{lstlisting}
+void f(int t[8])
+{
+	std::cout << sizeof(t) << std::endl;
+}
+	\end{lstlisting}
+	Hiába adunk meg egy méretet a tömbnek a függvény fejlécében, még mindig egy pointer mérete lesz a második kiírt szám. Az a tanulság, hogy ha érték szerint akarunk átadni egy tömböt, az át fog konvertálódni pointerré. A legszebb az lenne, ha a fenti szintaxis nem fordulna le. Ennek azonban történelmi oka van, a C-vel való visszafelé kompatibilitás miatt fordul le. 
+	\begin{note}
+		Tömböt értékül adni a szabvány szerint nem is lehet: \texttt{int *t2[5] = t} nem helyes.
+	\end{note}
+	Korábban megismerkedtünk egy módszerrel, mely segítségével egy tömb méretét (elemszámát) paraméterátadás után is megőriztük:
+	\begin{lstlisting}
+#include <iostream>
+
+void f(int *t, int size) // új paraméter!
+{
+	std::cout << sizeof(t) << std::endl;
+}
+
+int main()
+{
+	int t[] = {1,2,3,4,5};
+	std::cout << sizeof(t) << std::endl;
+	f(t, sizeof(t)/sizeof(t[0]));
+}
+	\end{lstlisting}
+	\begin{note}
+		Amennyiben C++11ben programozunk, érdemes az \texttt{std::array}-t használnunk, ami olyan, mint egy tömb, de nem tud pointerré konvertálódni és mindig tudja a méretét.
+	\end{note}
+	Ha szeretnénk egy tömböt egy darab paraméterként átadni, megpróbálhatunk egy tömbre mutató pointert létrehozni. Azonban figyelni kell a szintaktikára, ha \texttt{int *t[5]}-t írunk, egy öt elemű intre mutató pointereket tároló tömböt kapunk.
+	
+	\medskip
+	Ha tömbre mutató mutatót szeretnék, így csinálhatjuk:
+	\begin{lstlisting}
+void g(int (*t)[5])
+{
+	std::cout << sizeof(t) << std::endl;
+}
+	\end{lstlisting}
+	Azonban ez még mindig egy pointer méretét fogja kiírni, mert a \texttt{t} az egy sima mutató! Ahhoz, hogy megkapjuk, mire mutat, dereferálnunk kell, így a \texttt{sizeof} paraméterének \texttt{*t}-t kell megadni, ha a tömb méretére vagyunk kíváncsiak.
+	\begin{note}
+		Ha refenreciával vennénk át \texttt{t}-t, az is hasonlóan nézne ki:\, \texttt{int (\&t)[5]}.
+	\end{note}
+	\medskip
+	
+	Ha eltérő méretű tömböt próbálunk meg átadni, akkor nem fordul le a kód, mert nem egy 5 elemű tömbre mutató mutató 6 elemű tömbre mutató mutatóvá konvertálódni.
+	\begin{lstlisting}
+int main()
+{
+	int a[6];
+	g(&a); //forditasi hiba!
+	int b[5];
+	g(&b); //ok
+}
+	\end{lstlisting}
+	\begin{note}
+		Ahhoz, hogy egy olyan függvényt írjunk, ami minden méretű tömböt elfogad paraméterül, a legegyszerűbb megoldás, ha hagyjuk, hogy a tömb átkonvertálódjon egy első elemre mutató pointerré, és átadjuk külön paraméterben a tömb méretét. Bár van megoldás arra is, hogy egy darab "rugalmas" függvényt írjunk, és az egész tömbről csak egy paramétert vegyünk át. Majd a 7-8. gyakorlaton lesz részletesen szó, de a következő a szintaxis:
+		\begin{lstlisting}
+template <class T, int ArraySize>
+void ( T (&param)[ArraySize] )
+{
+	//...
+}
+		\end{lstlisting}
+		\smallskip
+		A működésének az elvét még nem baj, ha nem értjük. A háttérben egy template paraméter dedukció fog végbemenni: a fordító kitalálja \texttt{param} méretét. 
+		
+		\smallskip
+		A tömbök átvétele paraméterként azért ilyen körülményes, mert egy tömbnek a méretét fordítási időben ismernünk kell. Ha változó méretű tömböt várnánk paraméterül, az szembemenne ezzel a követelménnyel.  
+	\end{note}
+	Könnyű azt hinni (hibásan), hogy a pointerek ekvivalensek a tömbökkel.
+	\begin{lstlisting}
+#include <iostream>
+
+int main()
+{
+	int t[] = {5,4,3,2,1};
+	int *p = t;
+	std::cout << *p << std::endl; // 5
+	std::cout << sizeof(int) << std::endl; // implementációfüggő, legyen x
+	std::cout << sizeof(p) << std::endl; // implementációfüggő, legyen y
+	std::cout << sizeof(t) << std::endl; // 5*x
+}
+	\end{lstlisting} A fenti program jól szemlélteti, hogy ez nem igaz. A tömb típusa tartalmazza azt az információt, hogy hány elemű a tömb. Egy pointer típusa csak azt az információt tartalmazza, hogy a mutatott elem mekkora. Számos más különbség is van. A tévhit oka az, hogy tömb könnyen konvertálódik első elemre mutató pointerré.
+
 \end{document}
